--- a/luci-app-adguardhome/Makefile
+++ b/luci-app-adguardhome/Makefile
@@ -7,7 +7,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=luci-app-adguardhome
 LUCI_TITLE:=LuCI support for adguardhome
-LUCI_DEPENDS:=+!wget&&!curl:wget
+PKG_DEPENDS:=+!wget&&!curl:wget
 LUCI_PKGARCH:=all
 PKG_VERSION:=1.8
 PKG_RELEASE:=11
