--- a/luci-app-adguardhome1/Makefile
+++ b/luci-app-adguardhome1/Makefile
@@ -1,16 +1,19 @@
-# Copyright (C) 2018-2019 Lienol
+# Copyright (C) 2017 Ian Li <OpenSource@ianli.xyz>
 #
-# This is free software, licensed under the Apache License, Version 2.0 .
+# This is free software, licensed under the GNU General Public License v3.
+# See /LICENSE for more information.
 #
 
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=luci-app-adguardhome1
-LUCI_TITLE:=LuCI support for adguardhome (another packages)
-LUCI_DEPENDS:=+!wget&&!curl:wget
+LUCI_TITLE:=LuCI support for adguardhome1
+PKG_DEPENDS:=+!wget&&!curl:wget
 LUCI_PKGARCH:=all
 PKG_VERSION:=1.8
-PKG_RELEASE:=11
-PKG_MAINTAINER:=<https://github.com/rufengsuixing/luci-app-adguardhome>
+PKG_RELEASE:=20200827
+PKG_MAINTAINER:=<https://github.com/rufengsuixing/luci-app-adguardhome, https://github.com/Twinzo1/AdGuardHome>
 
 include $(TOPDIR)/feeds/luci/luci.mk
+
+# call BuildPackage - OpenWrt buildroot signature
